src/styles/globals.css
@import "tailwindcss";

:root {
  --body-color: #111827;
  --fill-color: #ffffff;
  --card-color: #1a2540;
  --border-color: #3d4f6f;
  --card-color2: #161e34d7;
  --border-divider: rgba(255, 255, 255, 0.1);
}

.darkmode {
  --body-color: #f3f4f6;
  --fill-color: #111528;
  --card-color: #ffffff;
  --border-color: #959090;
  --card-color2: #20325c39;
  --border-divider: rgba(0, 0, 0, 0.1);
}

body {
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
}

.body-color {
  background-color: var(--body-color);
}

.card-color {
  background-color: var(--card-color);
}

.text-fill-color {
  color: var(--fill-color);
}

.border-color {
  border: 1px solid var(--border-color);
}

.card-color2 {
  background-color: var(--card-color2);
}

.border-divider {
  border-color: var(--border-divider);
}

